fix drag extra items overflow

--- a/src/platform/packages/shared/kbn-dom-drag-drop/src/sass/droppable.scss
+++ b/src/platform/packages/shared/kbn-dom-drag-drop/src/sass/droppable.scss
@@ -101,9 +101,8 @@ $reorderItemMargin: $euiSizeS;
   right: calc(100% + #{$euiSizeS});
   top: 0;
   transition: opacity $euiAnimSpeedFast ease-in-out;
-  // Use a fixed width that's enough to fit the content (Duplicate/Swap labels)
-  // rather than matching the form width, to reduce horizontal overflow requirements.
-  width: 280px;
+  width: 100%;
+  max-width: $euiFormMaxWidth;
 }
 
 .domDroppable__extraTargets-visible {
